# skills

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml  seed.md
.agents/: README.md
.agents/skills/cultivate/: CHANGELOG.md  SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: skill-evals.yml
docs/: PLANS.md  QUALITY.md  RELIABILITY.md  SECURITY.md
docs/design-docs/: README.md  index.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: README.md  cultivate-hardening.md  harness-efficiency-fastapi-ab.md  harness-efficiency-study-events.jsonl  harness-efficiency-study-issues.md  harness-efficiency-study-runs.jsonl  harness-efficiency-study.md  unbounded-harness-study-runs.jsonl  unbounded-harness-study-tasks.md
docs/exec-plans/completed/: README.md  harness-efficiency-study-report.md  unbounded-harness-study-report.md  unbounded-harness-study.md
docs/plans/: _template.md
docs/product-specs/: README.md  index.md
docs/references/: README.md  harness-efficiency-prior-art.md
scripts/: eval_event_logger.py  eval_event_recover.py  eval_logger.py  eval_scorer.py  eval_turn_backfill.py  format_eval_summary.py  run_skill_evals.py  sync_agents_skills.py  test_eval_tools.py  test_validate_skills.py  unbounded_eval_logger.py  unbounded_eval_scorer.py  validate_skills.py
skills/: README.md
skills/cultivate/: CHANGELOG.md  SKILL.md
skills/cultivate/evals/: evals.json  (+1 more)
skills/harness-repo/: SKILL.md
skills/plot/: CHANGELOG.md  SKILL.md  methods.csv
(+19 files in other folders)
