[project]
name = "skills-monorepo"
version = "0.0.0"
description = "Monorepo of installable SKILL.md packages (plot, cultivate)."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
